--- a/src/main/resources/templates/EmailSignup.html
+++ b/src/main/resources/templates/EmailSignup.html
@@ -107,7 +107,7 @@
     <p>please click the button below to log in to your account:</p>
 
     <p style="text-align: center;">
-        <a class="cta-button" href="http://localhost:8081/api/v1/user/login">Login Your Account</a>
+        <a class="cta-button" th:href="${VerificationUrl}">Verification Account</a>
     </p>
 
     <p>Should you require any assistance or have questions about our services,
